# lab6

./: CMakeLists.txt
.cache/clangd/index/: JordanGaussSolver.cpp.EDCE6B1137F02BE3.idx  JordanGaussSolver.h.AF356185846CFC0C.idx  main.cpp.4247636E1C5F3933.idx  test_solver.cpp.A4B7171B76A0ACCC.idx
docs/: README.md
include/: JordanGaussSolver.h
src/: JordanGaussSolver.cpp  main.cpp
test/: test_solver.cpp
